# domain_cloud

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  NEWS.md  README.md  configure  configure.sh
doc/: CMakeLists.txt  Doxyfile-common.in  Doxyfile-dev.in  myprog.texi
src/: CMakeLists.txt  config.h.in  domaincloud.c  domaincloud.h  extractwords.c  extractwords.h  wordinfo.c  wordinfo.h
tests/: CMakeLists.txt  cminitests.h  shminitests.sh  test_cli_options.sh  test_domaincloud.c  test_strip_unwanted.c  test_word_frequency.c
